social counter overflow hidden problem solved

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Prompt', sans-serif;
+    background-color: whitesmoke;
     
 }
 .intro-section{
@@ -50,16 +51,34 @@ a{
     margin: auto 15px;
     width: 30%;
     height: 500px;
-    border: 2px  gainsboro;
+    border: 1px solid ghostwhite;
     border-radius: 15px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .4);
+    box-shadow: -2px -4px 8px 6px rgba(167, 167, 173, 0.3);
+    position: relative;
 
 }
 .dish{
-    padding-top: 10px;
-    padding-left: 10px;
+    padding-top: 11px;
+    padding-left: 11px;
 }
 .box-text{
     text-align: left;
     padding: 7px;
+}
+.social-user{
+    overflow: hidden ;
+    display: flex;
+    margin-top: 550px;
+    margin-left: 2.5%;
+    margin-bottom: 50px;
+    width: 95%;
+    height: 150px;
+    border: 1px solid rgb(241, 240, 231);
+    border-radius: 20px;
+    box-shadow: -2px -2px 10px 5px rgb(240, 239, 231);
+    
+}
+.social-count{
+    margin-left: 19%;
+    
 }
